--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "capitals",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Get countries capitals",
   "main": "index.js",
   "scripts": {
@@ -8,6 +8,10 @@
   },
   "author": "Hosein2398 <hosein2398@gmail.com>",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hosein2398/Capitals"
+  },
   "devDependencies": {
     "tape": "^4.8.0"
   }
